--- a/BoaViagem/res/layout/login.xml
+++ b/BoaViagem/res/layout/login.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/usuario"
-                android:inputType="text">
+                android:inputType="text" android:text="leitor">
 
             <requestFocus/>
         </EditText>
@@ -34,7 +34,7 @@
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="New EditText"
+                android:text="123"
                 android:id="@+id/senha" android:layout_gravity="center" android:inputType="textPassword"/>
         <Button
                 android:layout_width="match_parent"
