--- a/BoaViagem/res/layout/dashboard.xml
+++ b/BoaViagem/res/layout/dashboard.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nova Viagem"
-                android:id="@+id/textView1"
+                android:id="@+id/novaViagem"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="50dp"
                 android:clickable="true"
