Finalizando tela de novo gasto

--- a/BoaViagem/res/layout/gasto.xml
+++ b/BoaViagem/res/layout/gasto.xml
@@ -40,6 +40,18 @@
                 android:orientation="vertical"
                 android:layout_margin="8dp">
 
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/categoria" />
+
+            <Spinner
+                    android:id="@+id/categoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:prompt="@string/categoria">
+
+            </Spinner>
 
             <TableLayout
                     android:layout_width="match_parent"
@@ -78,6 +90,35 @@
                 </TableRow>
 
             </TableLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/descricao" />
+
+            <EditText
+                android:id="@+id/descricao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/local" />
+
+            <EditText
+                android:id="@+id/local"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="registrarGasto"
+                android:text="@string/gastei" />
+
 
         </LinearLayout>
 
